[gd_scene load_steps=3 format=3 uid="uid://doj05njfuwl4e"]

[ext_resource type="Script" uid="uid://berca2hgb8kl0" path="res://scripts/enemies/enemy_gun_manager.gd" id="2_v7tf8"]
[ext_resource type="Script" uid="uid://gdtsgqjn6ci7" path="res://scripts/enemies/enemy_nav/line_of_sight.gd" id="3_p5d8v"]

[node name="EnemyGun" type="Sprite2D"]
scale = Vector2(1.1484375, 0.3046875)
script = ExtResource("2_v7tf8")

[node name="RotationPivot" type="Node2D" parent="."]

[node name="ProjectileSpawn" type="Node2D" parent="RotationPivot"]
position = Vector2(75, 0)

[node name="GunSprite" type="Sprite2D" parent="RotationPivot"]

[node name="EnemyLineOfSight" type="RayCast2D" parent="."]
position = Vector2(-39.183674, -121.4359)
rotation = -1.5760323
scale = Vector2(10, 56.641)
collision_mask = 2
collide_with_areas = true
script = ExtResource("3_p5d8v")

[node name="shooting_sound" type="AudioStreamPlayer2D" parent="."]
